--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ main {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center;
+    object-position: left top;
     display: block;
 }
 
@@ -228,7 +228,8 @@ main {
     position: relative;
     z-index: 2;
     padding: var(--spacing-xxl) var(--spacing-xl);
-    margin-top: 80px; /* Account for navbar height */
+    margin-top: 1.5%; /* Account for navbar height */
+    margin-left: 2.5%;
     max-width: 600px;
     text-align: left;
 }
@@ -282,6 +283,10 @@ main {
     .hero-content p {
         font-size: 1.25rem;
     }
+
+    .hero-image img {
+        object-position: 60% top;
+    }
 }
 
 @media (max-width: 480px) {
@@ -308,5 +313,9 @@ main {
     
     .hero-content p {
         font-size: 1.125rem;
+    }
+
+    .hero-image img {
+        object-position: 60% top;
     }
 }
